linked js files

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
   </head>
-  <body></body>
+  <body>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
