Added Basic Html for Header

--- a/index.html
+++ b/index.html
@@ -15,6 +15,31 @@
     <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body>
+    <!-- Header Starts -->
+    <header>
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="d-none d-sm-block col-sm-9 col-md-7">
+            <span>Having any Trouble?</span>
+            <span
+              ><i class="fas fa-phone"></i
+              ><a href="tell://+8801234567890">(+880) 1234 567 890</a></span
+            >
+            <span
+              ><i class="fas fa-envelope"></i
+              ><a href="mailto://gyan@gmail.com"></a>gyan@gmail.com</span
+            >
+          </div>
+          <div class="col-sm-2 col-md-3">
+            <a href="#">Register</a>
+            <span>/</span>
+            <a href="#">Login</a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- Header Ends -->
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/script.js"></script>
