--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="container">
         <div class="row justify-content-between">
-          <div class="d-none d-sm-block col-sm-9 col-md-7">
+          <div class="d-none d-sm-block col-sm-9 col-md-7 h_left">
             <span>Having any Trouble?</span>
             <span
               ><i class="fas fa-phone"></i
@@ -27,10 +27,10 @@
             >
             <span
               ><i class="fas fa-envelope"></i
-              ><a href="mailto://gyan@gmail.com"></a>gyan@gmail.com</span
+              ><a href="mailto:gyan@gmail.com">gyan@gmail.com</a></span
             >
           </div>
-          <div class="col-sm-2 col-md-3">
+          <div class="col-sm-2 col-md-3 h_right">
             <a href="#">Register</a>
             <span>/</span>
             <a href="#">Login</a>
