Header Part Completed

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
     <!-- Header Starts -->
     <header>
       <div class="container">
-        <div class="row justify-content-between">
-          <div class="d-none d-sm-block col-sm-9 col-md-7 h_left">
+        <div class="row">
+          <div class="d-none d-sm-block col-sm-9 h_left">
             <span>Having any Trouble?</span>
             <span
               ><i class="fas fa-phone"></i
               ><a href="tell://+8801234567890">(+880) 1234 567 890</a></span
             >
-            <span
+            <span class="d-none d-md-inline-block"
               ><i class="fas fa-envelope"></i
               ><a href="mailto:gyan@gmail.com">gyan@gmail.com</a></span
             >
           </div>
-          <div class="col-sm-2 col-md-3 h_right">
+          <div class="col-sm-3 text-end h_right">
             <a href="#">Register</a>
             <span>/</span>
             <a href="#">Login</a>
