fixed typo in tel link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span>Having any Trouble?</span>
             <span
               ><i class="fas fa-phone"></i
-              ><a href="tell:+8801234567890">(+880) 1234 567 890</a></span
+              ><a href="tel:+8801234567890">(+880) 1234 567 890</a></span
             >
             <span class="d-none d-md-inline-block"
               ><i class="fas fa-envelope"></i
