completed nav for medium and larger devices

--- a/index.html
+++ b/index.html
@@ -40,6 +40,52 @@
     </header>
     <!-- Header Ends -->
 
+    <!-- Nav Part Starts -->
+    <nav class="navbar navbar-expand-md">
+      <div class="container align-items-end">
+        <a class="navbar-brand" href="#">
+          <img src="images/logo.png" alt="logo" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto main_menu">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Our Courses</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#">Our Events</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#">Our Teachers</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+          <div class="get_started">
+            <a href="#">Get Started Now</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- Nav Part Ends -->
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/script.js"></script>
