added media query resoulation settings for responsive design

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Header Ends -->
 
     <!-- Nav Part Starts -->
-    <nav class="navbar navbar-expand-md">
+    <nav class="navbar navbar-expand-lg">
       <div class="container align-items-end">
         <a class="navbar-brand" href="#">
           <img src="images/logo.png" alt="logo" />
