completed nav for smaller devices

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <a class="nav-link" href="#">Contact</a>
             </li>
           </ul>
-          <div class="get_started">
+          <div class="d-none d-lg-inline-block get_started">
             <a href="#">Get Started Now</a>
           </div>
         </div>
