added structure for banner slider

--- a/index.html
+++ b/index.html
@@ -87,6 +87,23 @@
     </nav>
     <!-- Nav Part Ends -->
 
+    <!-- Banner Part Starts -->
+    <section id="banner">
+      <div
+        class="slide_content"
+        style="background-image: url(images/banner_01.png)"
+      ></div>
+      <div
+        class="slide_content"
+        style="background-image: url(images/banner_02.png)"
+      ></div>
+      <div
+        class="slide_content"
+        style="background-image: url(images/banner_03.jpg)"
+      ></div>
+    </section>
+    <!-- Banner Part Ends -->
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/tiny-slider.js"></script>
