--- a/index.html
+++ b/index.html
@@ -88,19 +88,76 @@
     <!-- Nav Part Ends -->
 
     <!-- Banner Part Starts -->
-    <section id="banner">
+    <section id="banner" class="home_slider">
       <div
         class="slide_content"
         style="background-image: url(images/banner_01.png)"
-      ></div>
+      >
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-7 banner_content">
+              <h1>
+                <span>Let's Learn</span> <br />
+                For Bright Future
+              </h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incidunt ut labore et dolore magna aliqua. Quis
+                ipsum suspendisse ultrices gravida. Risus comodo viverra
+                maecenas accumsan lacus vel facilisis.
+              </p>
+              <a href="#" class="sec_bg">Start a Course</a>
+              <a href="#" class="prime_bg">Take a Tour</a>
+            </div>
+          </div>
+        </div>
+      </div>
       <div
         class="slide_content"
-        style="background-image: url(images/banner_02.png)"
-      ></div>
+        style="background-image: url(images/banner_02.jpg)"
+      >
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-7 banner_content">
+              <h1>
+                <span>Let's Learn</span> <br />
+                For Bright Future
+              </h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incidunt ut labore et dolore magna aliqua. Quis
+                ipsum suspendisse ultrices gravida. Risus comodo viverra
+                maecenas accumsan lacus vel facilisis.
+              </p>
+              <a href="#" class="sec_bg">Start a Course</a>
+              <a href="#" class="prime_bg">Take a Tour</a>
+            </div>
+          </div>
+        </div>
+      </div>
       <div
         class="slide_content"
         style="background-image: url(images/banner_03.jpg)"
-      ></div>
+      >
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-7 banner_content">
+              <h1>
+                <span>Let's Learn</span> <br />
+                For Bright Future
+              </h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incidunt ut labore et dolore magna aliqua. Quis
+                ipsum suspendisse ultrices gravida. Risus comodo viverra
+                maecenas accumsan lacus vel facilisis.
+              </p>
+              <a href="#" class="sec_bg">Start a Course</a>
+              <a href="#" class="prime_bg">Take a Tour</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- Banner Part Ends -->
 
