added arrows html for home banner

--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
 
     <!-- Banner Part Starts -->
     <section id="banner" class="home_slider">
+      <div class="slider_arrows">
+        <div class="slider_left_arrow">
+          <i class="fas fa-angle-left"></i>
+        </div>
+        <div class="slider_right_arrow">
+          <i class="fas fa-angle-right"></i>
+        </div>
+      </div>
       <div
         class="slide_content"
         style="background-image: url(images/banner_01.png)"
