fixed position for home slider arrow

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="slider_left_arrow">
           <i class="fas fa-angle-left"></i>
         </div>
-        <div class="slider_right_arrow">
+        <div class="slider_right_arrow text-end">
           <i class="fas fa-angle-right"></i>
         </div>
       </div>
