--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         >
           <div class="container">
             <div class="row align-items-center">
-              <div class="col-lg-7 banner_content">
+              <div class="col-xl-7 banner_content">
                 <h1>
                   <span>Let's Learn</span> <br />
                   For Bright Future
@@ -127,7 +127,7 @@
         >
           <div class="container">
             <div class="row align-items-center">
-              <div class="col-lg-7 banner_content">
+              <div class="col-xl-7 banner_content">
                 <h1>
                   <span>Let's Learn</span> <br />
                   For Bright Future
@@ -150,7 +150,7 @@
         >
           <div class="container">
             <div class="row align-items-center">
-              <div class="col-lg-7 banner_content">
+              <div class="col-xl-7 banner_content">
                 <h1>
                   <span>Let's Learn</span> <br />
                   For Bright Future
