added row class for support section

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <!-- Support Part Starts -->
     <section id="support">
       <div class="container">
-        <div class="row">
+        <div class="row text-center">
           <div class="col-md-4 support_item">
             <img src="images/online_class_icon.png" alt="" />
             <h2>Online Classes</h2>
