added section headging for about us section

--- a/index.html
+++ b/index.html
@@ -201,6 +201,24 @@
     </section>
     <!-- Support Part Ends -->
 
+    <!-- About Us Part Starts -->
+    <section id="home_about">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-7">
+            <div class="section_heading text-center">
+              <h2>About Us</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incidiunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- About Us Part Ends -->
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/tiny-slider.js"></script>
