added html structure for about slider

--- a/index.html
+++ b/index.html
@@ -215,6 +215,42 @@
             </div>
           </div>
         </div>
+        <div class="row about_content">
+          <div class="col-md-6 about_left">
+            <div class="slider_dots">
+              <button><i class="far fa-circle"></i></button>
+              <button><i class="far fa-circle"></i></button>
+              <button><i class="far fa-circle"></i></button>
+            </div>
+            <div class="about_slider">
+              <div class="slide_item">
+                <img src="images/aboutSlider1.png" alt="" />
+              </div>
+              <div class="slide_item">
+                <img src="images/aboutSlider2.png" alt="" />
+              </div>
+              <div class="slide_item">
+                <img src="images/aboutSlider3.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incidunt ut labore et dolore magna aliqua. Quis
+              ipsum suspendisse ultrices gravida. Risus coodo vivera maecenas
+              accumsan lacus vel facilisis. Lorem ipsum dolor sit amet,
+              consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore.
+            </p>
+            <p>
+              et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+              Risus commodo viverra maecenas accumsan lacus vel facilisis.
+            </p>
+            <a href="#">Know More</a>
+            <a href="#">Enroll Now</a>
+          </div>
+        </div>
       </div>
     </section>
     <!-- About Us Part Ends -->
