fixed breakpoint for about section

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           </div>
         </div>
         <div class="row about_content">
-          <div class="col-md-6 about_left">
+          <div class="col-lg-6 about_left">
             <div class="slider_dots">
               <button><i class="far fa-circle"></i></button>
               <button><i class="far fa-circle"></i></button>
@@ -234,7 +234,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-lg-6 about_right text-center text-md-start">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incidunt ut labore et dolore magna aliqua. Quis
@@ -247,8 +247,8 @@
               et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
               Risus commodo viverra maecenas accumsan lacus vel facilisis.
             </p>
-            <a href="#">Know More</a>
-            <a href="#">Enroll Now</a>
+            <a href="#" class="prime_bg">Know More</a>
+            <a href="#" class="prime_bg">Enroll Now</a>
           </div>
         </div>
       </div>
