added counter section

--- a/index.html
+++ b/index.html
@@ -255,6 +255,43 @@
     </section>
     <!-- About Us Part Ends -->
 
+    <!-- Counter Part Starts -->
+    <section id="counter">
+      <div class="container">
+        <div class="row text-center text-white">
+          <div class="col-lg-3">
+            <div class="count_teacher">
+              <h2 class="counter">567</h2>
+              <h4>Teachers</h4>
+              <img src="images/counterPartBorderBottom.png" alt="" />
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="count_teacher">
+              <h2 class="counter">1757</h2>
+              <h4>Students</h4>
+              <img src="images/counterPartBorderBottom.png" alt="" />
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="count_teacher">
+              <h2 class="counter">102</h2>
+              <h4>Offline Courses</h4>
+              <img src="images/counterPartBorderBottom.png" alt="" />
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="count_teacher">
+              <h2 class="counter">56</h2>
+              <h4>Online Classes</h4>
+              <img src="images/counterPartBorderBottom.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Counter Part Ends -->
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/tiny-slider.js"></script>
