linked waypoint js and counter up js

--- a/index.html
+++ b/index.html
@@ -294,6 +294,8 @@
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/jquery.counterup.min.js"></script>
     <script src="js/tiny-slider.js"></script>
     <script src="js/script.js"></script>
   </body>
