renamed some class names in counter sections

--- a/index.html
+++ b/index.html
@@ -259,29 +259,29 @@
     <section id="counter">
       <div class="container">
         <div class="row text-center text-white">
-          <div class="col-lg-3">
+          <div class="col-6 col-sm-3">
             <div class="count_teacher">
               <h2 class="counter">567</h2>
               <h4>Teachers</h4>
               <img src="images/counterPartBorderBottom.png" alt="" />
             </div>
           </div>
-          <div class="col-lg-3">
-            <div class="count_teacher">
+          <div class="col-6 col-sm-3">
+            <div class="count_student">
               <h2 class="counter">1757</h2>
               <h4>Students</h4>
               <img src="images/counterPartBorderBottom.png" alt="" />
             </div>
           </div>
-          <div class="col-lg-3">
-            <div class="count_teacher">
+          <div class="col-6 col-sm-3">
+            <div class="count_course">
               <h2 class="counter">102</h2>
               <h4>Offline Courses</h4>
               <img src="images/counterPartBorderBottom.png" alt="" />
             </div>
           </div>
-          <div class="col-lg-3">
-            <div class="count_teacher">
+          <div class="col-6 col-sm-3">
+            <div class="count_classe">
               <h2 class="counter">56</h2>
               <h4>Online Classes</h4>
               <img src="images/counterPartBorderBottom.png" alt="" />
