added html for course slider arrows

--- a/index.html
+++ b/index.html
@@ -307,6 +307,12 @@
           </div>
         </div>
         <div class="courses_wrapper">
+          <div class="course_slider_left_arrow text-center">
+            <i class="fas fa-angle-left"></i>
+          </div>
+          <div class="course_slider_right_arrow text-center">
+            <i class="fas fa-angle-right"></i>
+          </div>
           <div class="course_slider">
             <div class="course_item_wrapper">
               <div class="course_item">
@@ -416,7 +422,7 @@
                   </div>
                 </div>
                 <div class="course_title">
-                  <h3>Advance Graphic Design</h3>
+                  <h3>Web Development</h3>
                 </div>
                 <div class="course_description">
                   <p>
@@ -489,7 +495,7 @@
                   </div>
                 </div>
                 <div class="course_title">
-                  <h3>Advance Graphic Design</h3>
+                  <h3>Advance Web Design</h3>
                 </div>
                 <div class="course_description">
                   <p>
@@ -562,7 +568,7 @@
                   </div>
                 </div>
                 <div class="course_title">
-                  <h3>Advance Graphic Design</h3>
+                  <h3>SEO/Online Marketing</h3>
                 </div>
                 <div class="course_description">
                   <p>
@@ -635,7 +641,7 @@
                   </div>
                 </div>
                 <div class="course_title">
-                  <h3>Advance Graphic Design</h3>
+                  <h3>Ethical Hacking</h3>
                 </div>
                 <div class="course_description">
                   <p>
@@ -708,7 +714,7 @@
                   </div>
                 </div>
                 <div class="course_title">
-                  <h3>Advance Graphic Design</h3>
+                  <h3>3D Animation</h3>
                 </div>
                 <div class="course_description">
                   <p>
