--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                       <p>Conducted by:</p>
                       <h5>Sujon Shaha</h5>
                     </div>
-                    <div class="col-lg-4 course_author_rating text-end">
+                    <div class="col-lg-4 course_author_rating text-lg-end">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
@@ -368,13 +368,13 @@
                       </div>
                     </div>
                     <div class="col-4">
-                      <div class="course_fee">
+                      <div class="course_fee text-center">
                         <p class="course_details_heading">Course Fee</p>
                         <p class="course_details_value">375 USD</p>
                       </div>
                     </div>
                     <div class="col-4">
-                      <div class="no_of_classes">
+                      <div class="no_of_classes text-end">
                         <p class="course_details_heading">Total Classes</p>
                         <p class="course_details_value">40 Classes</p>
                       </div>
@@ -411,7 +411,7 @@
                       <p>Conducted by:</p>
                       <h5>Sujon Shaha</h5>
                     </div>
-                    <div class="col-lg-4 course_author_rating text-end">
+                    <div class="col-lg-4 course_author_rating text-lg-end">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
@@ -441,13 +441,13 @@
                       </div>
                     </div>
                     <div class="col-4">
-                      <div class="course_fee">
+                      <div class="course_fee text-center">
                         <p class="course_details_heading">Course Fee</p>
                         <p class="course_details_value">375 USD</p>
                       </div>
                     </div>
                     <div class="col-4">
-                      <div class="no_of_classes">
+                      <div class="no_of_classes text-end">
                         <p class="course_details_heading">Total Classes</p>
                         <p class="course_details_value">40 Classes</p>
                       </div>
@@ -484,7 +484,7 @@
                       <p>Conducted by:</p>
                       <h5>Sujon Shaha</h5>
                     </div>
-                    <div class="col-lg-4 course_author_rating text-end">
+                    <div class="col-lg-4 course_author_rating text-lg-end">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
@@ -514,13 +514,13 @@
                       </div>
                     </div>
                     <div class="col-4">
-                      <div class="course_fee">
+                      <div class="course_fee text-center">
                         <p class="course_details_heading">Course Fee</p>
                         <p class="course_details_value">375 USD</p>
                       </div>
                     </div>
                     <div class="col-4">
-                      <div class="no_of_classes">
+                      <div class="no_of_classes text-end">
                         <p class="course_details_heading">Total Classes</p>
                         <p class="course_details_value">40 Classes</p>
                       </div>
@@ -557,7 +557,7 @@
                       <p>Conducted by:</p>
                       <h5>Sujon Shaha</h5>
                     </div>
-                    <div class="col-lg-4 course_author_rating text-end">
+                    <div class="col-lg-4 course_author_rating text-lg-end">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
@@ -587,13 +587,13 @@
                       </div>
                     </div>
                     <div class="col-4">
-                      <div class="course_fee">
+                      <div class="course_fee text-center">
                         <p class="course_details_heading">Course Fee</p>
                         <p class="course_details_value">375 USD</p>
                       </div>
                     </div>
                     <div class="col-4">
-                      <div class="no_of_classes">
+                      <div class="no_of_classes text-end">
                         <p class="course_details_heading">Total Classes</p>
                         <p class="course_details_value">40 Classes</p>
                       </div>
@@ -630,7 +630,7 @@
                       <p>Conducted by:</p>
                       <h5>Sujon Shaha</h5>
                     </div>
-                    <div class="col-lg-4 course_author_rating text-end">
+                    <div class="col-lg-4 course_author_rating text-lg-end">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
@@ -660,13 +660,13 @@
                       </div>
                     </div>
                     <div class="col-4">
-                      <div class="course_fee">
+                      <div class="course_fee text-center">
                         <p class="course_details_heading">Course Fee</p>
                         <p class="course_details_value">375 USD</p>
                       </div>
                     </div>
                     <div class="col-4">
-                      <div class="no_of_classes">
+                      <div class="no_of_classes text-end">
                         <p class="course_details_heading">Total Classes</p>
                         <p class="course_details_value">40 Classes</p>
                       </div>
@@ -703,7 +703,7 @@
                       <p>Conducted by:</p>
                       <h5>Sujon Shaha</h5>
                     </div>
-                    <div class="col-lg-4 course_author_rating text-end">
+                    <div class="col-lg-4 course_author_rating text-lg-end">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
@@ -733,13 +733,13 @@
                       </div>
                     </div>
                     <div class="col-4">
-                      <div class="course_fee">
+                      <div class="course_fee text-center">
                         <p class="course_details_heading">Course Fee</p>
                         <p class="course_details_value">375 USD</p>
                       </div>
                     </div>
                     <div class="col-4">
-                      <div class="no_of_classes">
+                      <div class="no_of_classes text-end">
                         <p class="course_details_heading">Total Classes</p>
                         <p class="course_details_value">40 Classes</p>
                       </div>
