fixed horizontal scrolling issue with course slider

--- a/index.html
+++ b/index.html
@@ -338,7 +338,9 @@
                       <p>Conducted by:</p>
                       <h5>Sujon Shaha</h5>
                     </div>
-                    <div class="col-lg-4 course_author_rating text-lg-end">
+                    <div
+                      class="col-lg-4 course_author_rating text-lg-end px-lg-0"
+                    >
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
@@ -411,7 +413,9 @@
                       <p>Conducted by:</p>
                       <h5>Sujon Shaha</h5>
                     </div>
-                    <div class="col-lg-4 course_author_rating text-lg-end">
+                    <div
+                      class="col-lg-4 course_author_rating text-lg-end px-lg-0"
+                    >
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
@@ -484,7 +488,9 @@
                       <p>Conducted by:</p>
                       <h5>Sujon Shaha</h5>
                     </div>
-                    <div class="col-lg-4 course_author_rating text-lg-end">
+                    <div
+                      class="col-lg-4 course_author_rating text-lg-end px-lg-0"
+                    >
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
@@ -557,7 +563,9 @@
                       <p>Conducted by:</p>
                       <h5>Sujon Shaha</h5>
                     </div>
-                    <div class="col-lg-4 course_author_rating text-lg-end">
+                    <div
+                      class="col-lg-4 course_author_rating text-lg-end px-lg-0"
+                    >
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
@@ -630,7 +638,9 @@
                       <p>Conducted by:</p>
                       <h5>Sujon Shaha</h5>
                     </div>
-                    <div class="col-lg-4 course_author_rating text-lg-end">
+                    <div
+                      class="col-lg-4 course_author_rating text-lg-end px-lg-0"
+                    >
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
