added right column structure for home event section

--- a/index.html
+++ b/index.html
@@ -767,6 +767,118 @@
     </section>
     <!-- Our Course Part Ends -->
 
+    <!-- Home Event Part Starts -->
+    <section id="home_event">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-7">
+            <div class="section_heading text-center">
+              <h2>Our Events</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incidiunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="event_cal"></div>
+          </div>
+          <div class="col-lg-6">
+            <div class="event_items">
+              <div class="row flex-column">
+                <div class="event_item">
+                  <div class="row align-content-center">
+                    <div class="col-lg-5">
+                      <div class="event_img">
+                        <img class="w-100" src="images/event2.png" alt="" />
+                        <div class="date_badge">
+                          <p class="text-center">15 Nov</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-7">
+                      <div class="event_details">
+                        <h2>UI/UX Bootcamp Meetup 2019</h2>
+                        <p>
+                          Lorem ipsum dolor sit amet, consecteturng elit sed do
+                          eiusmod temor
+                        </p>
+                        <div class="row">
+                          <div class="col-lg-5">
+                            <div class="event_location">
+                              <p>
+                                <i class="fas fa-map-marker-alt"></i>Seminar
+                                Room
+                              </p>
+                            </div>
+                          </div>
+                          <div class="col-lg-7">
+                            <div class="event_time">
+                              <p>
+                                <i class="far fa-clock"></i>9:00 AM - 1:00 PM
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="join_btn">
+                          <a href="#" class="prime_bg">Join Now</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="event_item">
+                  <div class="row align-content-center">
+                    <div class="col-lg-5">
+                      <div class="event_img">
+                        <img class="w-100" src="images/event2.png" alt="" />
+                        <div class="date_badge">
+                          <p class="text-center">25 Nov</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-7">
+                      <div class="event_details">
+                        <h2>UI/UX Bootcamp Meetup 2019</h2>
+                        <p>
+                          Lorem ipsum dolor sit amet, consecteturng elit sed do
+                          eiusmod temor
+                        </p>
+                        <div class="row">
+                          <div class="col-lg-5">
+                            <div class="event_location">
+                              <p>
+                                <i class="fas fa-map-marker-alt"></i>Seminar
+                                Room
+                              </p>
+                            </div>
+                          </div>
+                          <div class="col-lg-7">
+                            <div class="event_time">
+                              <p>
+                                <i class="far fa-clock"></i>9:00 AM - 1:00 PM
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="join_btn">
+                          <a href="#" class="prime_bg">Join Now</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Home Event Part Ends -->
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
