fixed breakpoint for home event right column

--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
               <div class="row flex-column">
                 <div class="event_item">
                   <div class="row align-content-center">
-                    <div class="col-lg-5">
+                    <div class="col-sm-5">
                       <div class="event_img">
                         <img class="w-100" src="images/event2.png" alt="" />
                         <div class="date_badge">
@@ -798,7 +798,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-lg-7">
+                    <div class="col-sm-7">
                       <div class="event_details">
                         <h2>UI/UX Bootcamp Meetup 2019</h2>
                         <p>
@@ -832,7 +832,7 @@
 
                 <div class="event_item">
                   <div class="row align-content-center">
-                    <div class="col-lg-5">
+                    <div class="col-sm-5">
                       <div class="event_img">
                         <img class="w-100" src="images/event2.png" alt="" />
                         <div class="date_badge">
@@ -840,7 +840,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-lg-7">
+                    <div class="col-sm-7">
                       <div class="event_details">
                         <h2>UI/UX Bootcamp Meetup 2019</h2>
                         <p>
