fixed some breakpoint class in home event right column

--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
                           eiusmod temor
                         </p>
                         <div class="row">
-                          <div class="col-lg-5">
+                          <div class="col-5">
                             <div class="event_location">
                               <p>
                                 <i class="fas fa-map-marker-alt"></i>Seminar
@@ -814,7 +814,7 @@
                               </p>
                             </div>
                           </div>
-                          <div class="col-lg-7">
+                          <div class="col-7">
                             <div class="event_time">
                               <p>
                                 <i class="far fa-clock"></i>9:00 AM - 1:00 PM
@@ -848,7 +848,7 @@
                           eiusmod temor
                         </p>
                         <div class="row">
-                          <div class="col-lg-5">
+                          <div class="col-5">
                             <div class="event_location">
                               <p>
                                 <i class="fas fa-map-marker-alt"></i>Seminar
@@ -856,7 +856,7 @@
                               </p>
                             </div>
                           </div>
-                          <div class="col-lg-7">
+                          <div class="col-7">
                             <div class="event_time">
                               <p>
                                 <i class="far fa-clock"></i>9:00 AM - 1:00 PM
