added gutter between event items

--- a/index.html
+++ b/index.html
@@ -785,9 +785,10 @@
           <div class="col-lg-6">
             <div class="event_cal"></div>
           </div>
+
           <div class="col-lg-6">
             <div class="event_items">
-              <div class="row flex-column">
+              <div class="row flex-column gy-4">
                 <div class="event_item">
                   <div class="row align-content-center">
                     <div class="col-sm-5">
