added event calendar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
     <link rel="stylesheet" href="css/tiny-slider.css" />
+    <link rel="stylesheet" href="css/pb.calendar.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
   </head>
@@ -783,7 +784,9 @@
         </div>
         <div class="row">
           <div class="col-lg-6">
-            <div class="event_cal"></div>
+            <div class="event_cal">
+              <div id="pb-calendar" class="pb-calendar"></div>
+            </div>
           </div>
 
           <div class="col-lg-6">
@@ -795,7 +798,7 @@
                       <div class="event_img">
                         <img class="w-100" src="images/event2.png" alt="" />
                         <div class="date_badge">
-                          <p class="text-center">15 Nov</p>
+                          <p class="text-center">15 May</p>
                         </div>
                       </div>
                     </div>
@@ -832,12 +835,12 @@
                 </div>
 
                 <div class="event_item">
-                  <div class="row align-content-center">
+                  <div class="row">
                     <div class="col-sm-5">
                       <div class="event_img">
                         <img class="w-100" src="images/event2.png" alt="" />
                         <div class="date_badge">
-                          <p class="text-center">25 Nov</p>
+                          <p class="text-center">20 May</p>
                         </div>
                       </div>
                     </div>
@@ -882,9 +885,11 @@
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="js/moment.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
     <script src="js/tiny-slider.js"></script>
+    <script src="js/pb.calendar.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
