added gutter between home event columns

--- a/index.html
+++ b/index.html
@@ -782,10 +782,10 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row gx-5">
           <div class="col-lg-6">
             <div class="event_cal">
-              <div id="pb-calendar" class="pb-calendar"></div>
+              <div id="pb-calendar" class="pb-calendar h-100"></div>
             </div>
           </div>
 
