--- a/index.html
+++ b/index.html
@@ -883,6 +883,125 @@
     </section>
     <!-- Home Event Part Ends -->
 
+    <!-- Testimonial Part Starts -->
+
+    <section id="testimonial">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-7">
+            <div class="section_heading text-center">
+              <h2>Our Testimonial & FAQ</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incidiunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-8">
+            <div class="testimonial_slider">
+              <div class="testimonial_slider_item">
+                <div class="row align-items-center">
+                  <div class="col-md-6">
+                    <div class="testimonial_slide_img">
+                      <img class="w-100" src="images/eventSlider1.png" alt="" />
+                    </div>
+                  </div>
+                  <div class="col-md-6 aligni">
+                    <div class="testimonial_des h-100">
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit, sed doeiudr incididunt ut labore et dolore magna
+                        aliqua. Ut enim a minim eniam, quis nostrud exercitation
+                        ullamco laboris nisi ut liquip ex ea cmmodo consequat.
+                      </p>
+                      <h3>
+                        Tahsina Michalvina <span>- Satisfied Student</span>
+                      </h3>
+                      <div class="testimonial_rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="testimonial_slider_item">
+                <div class="row align-items-center">
+                  <div class="col-md-6">
+                    <div class="testimonial_slide_img">
+                      <img
+                        class="w-100"
+                        src="images/Testimonial 02.jpg"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <div class="col-md-6 aligni">
+                    <div class="testimonial_des h-100">
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit, sed doeiudr incididunt ut labore et dolore magna
+                        aliqua. Ut enim a minim eniam, quis nostrud exercitation
+                        ullamco laboris nisi ut liquip ex ea cmmodo consequat.
+                      </p>
+                      <h3>Shamima Sultana <span>- Satisfied Student</span></h3>
+                      <div class="testimonial_rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="testimonial_slider_item">
+                <div class="row align-items-center">
+                  <div class="col-md-6">
+                    <div class="testimonial_slide_img">
+                      <img
+                        class="w-100"
+                        src="images/Testimonial 03.jpg"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <div class="col-md-6 aligni">
+                    <div class="testimonial_des h-100">
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit, sed doeiudr incididunt ut labore et dolore magna
+                        aliqua. Ut enim a minim eniam, quis nostrud exercitation
+                        ullamco laboris nisi ut liquip ex ea cmmodo consequat.
+                      </p>
+                      <h3>Sakeba Aney <span>- Satisfied Student</span></h3>
+                      <div class="testimonial_rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Testimonial Part Ends -->
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/moment.js"></script>
