added testimonial slider arrow html

--- a/index.html
+++ b/index.html
@@ -898,17 +898,25 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row align-items-center testimonial_main">
           <div class="col-lg-8">
+            <div class="row gy-2 testimonial_slider_arrow">
+              <div class="test_slide_icon_next">
+                <i class="fas fa-angle-right text-center"></i>
+              </div>
+              <div class="test_slide_icon_prev">
+                <i class="fas fa-angle-left text-center"></i>
+              </div>
+            </div>
             <div class="testimonial_slider">
               <div class="testimonial_slider_item">
                 <div class="row align-items-center">
                   <div class="col-md-6">
-                    <div class="testimonial_slide_img">
+                    <div class="testimonial_slide_img my-3">
                       <img class="w-100" src="images/eventSlider1.png" alt="" />
                     </div>
                   </div>
-                  <div class="col-md-6 aligni">
+                  <div class="col-md-6 align-items-center">
                     <div class="testimonial_des h-100">
                       <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -934,7 +942,7 @@
               <div class="testimonial_slider_item">
                 <div class="row align-items-center">
                   <div class="col-md-6">
-                    <div class="testimonial_slide_img">
+                    <div class="testimonial_slide_img my-3">
                       <img
                         class="w-100"
                         src="images/Testimonial 02.jpg"
@@ -942,7 +950,7 @@
                       />
                     </div>
                   </div>
-                  <div class="col-md-6 aligni">
+                  <div class="col-md-6 align-items-center">
                     <div class="testimonial_des h-100">
                       <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -966,7 +974,7 @@
               <div class="testimonial_slider_item">
                 <div class="row align-items-center">
                   <div class="col-md-6">
-                    <div class="testimonial_slide_img">
+                    <div class="testimonial_slide_img my-3">
                       <img
                         class="w-100"
                         src="images/Testimonial 03.jpg"
@@ -974,7 +982,7 @@
                       />
                     </div>
                   </div>
-                  <div class="col-md-6 aligni">
+                  <div class="col-md-6 align-items-center">
                     <div class="testimonial_des h-100">
                       <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing
