--- a/index.html
+++ b/index.html
@@ -902,10 +902,10 @@
           <div class="col-lg-8">
             <div class="row gy-2 testimonial_slider_arrow">
               <div class="test_slide_icon_next">
-                <i class="fas fa-angle-right text-right text-sm-center"></i>
+                <i class="fas fa-angle-right text-center"></i>
               </div>
               <div class="test_slide_icon_prev">
-                <i class="fas fa-angle-left text-right text-sm-center"></i>
+                <i class="fas fa-angle-left text-center"></i>
               </div>
             </div>
             <div class="testimonial_slider">
