added home teachers section

--- a/index.html
+++ b/index.html
@@ -1096,6 +1096,123 @@
 
     <!-- Testimonial Part Ends -->
 
+    <!-- Our Teacher Part Starts -->
+
+    <section id="home_teacher">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-7">
+            <div class="section_heading text-center">
+              <h2>Our Teachers</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incidiunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="teachers">
+          <div class="single_teacher">
+            <div class="teacher_img">
+              <img class="w-100" src="images/teacher2.png" alt="" />
+              <div class="teachers_social text-center">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-pinterest-p"></i>
+              </div>
+            </div>
+            <div class="teachers_details text-center">
+              <h3>Shamima Sultana</h3>
+              <p>Sr. Faculty Member</p>
+              <img src="images/counterPartBorderBottom.png" alt="" />
+            </div>
+          </div>
+
+          <div class="single_teacher">
+            <div class="teacher_img">
+              <img class="w-100" src="images/teacher3.png" alt="" />
+              <div class="teachers_social text-center">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-pinterest-p"></i>
+              </div>
+            </div>
+            <div class="teachers_details text-center">
+              <h3>Sujon Shaha</h3>
+              <p>Sr. Faculty Member</p>
+              <img src="images/counterPartBorderBottom.png" alt="" />
+            </div>
+          </div>
+
+          <div class="single_teacher">
+            <div class="teacher_img">
+              <img class="w-100" src="images/teacher4.png" alt="" />
+              <div class="teachers_social text-center">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-pinterest-p"></i>
+              </div>
+            </div>
+            <div class="teachers_details text-center">
+              <h3>Rouhe Deo</h3>
+              <p>Sr. Faculty Member</p>
+              <img src="images/counterPartBorderBottom.png" alt="" />
+            </div>
+          </div>
+
+          <div class="single_teacher">
+            <div class="teacher_img">
+              <img class="w-100" src="images/teacher1.png" alt="" />
+              <div class="teachers_social text-center">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-pinterest-p"></i>
+              </div>
+            </div>
+            <div class="teachers_details text-center">
+              <h3>Alexander Alex</h3>
+              <p>Sr. Faculty Member</p>
+              <img src="images/counterPartBorderBottom.png" alt="" />
+            </div>
+          </div>
+
+          <div class="single_teacher">
+            <div class="teacher_img">
+              <img class="w-100" src="images/Teacher 05.jpg" alt="" />
+              <div class="teachers_social text-center">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-pinterest-p"></i>
+              </div>
+            </div>
+            <div class="teachers_details text-center">
+              <h3>Edward Leo</h3>
+              <p>Sr. Faculty Member</p>
+              <img src="images/counterPartBorderBottom.png" alt="" />
+            </div>
+          </div>
+
+          <div class="single_teacher">
+            <div class="teacher_img">
+              <img class="w-100" src="images/Teacher 08.jpg" alt="" />
+              <div class="teachers_social text-center">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-pinterest-p"></i>
+              </div>
+            </div>
+            <div class="teachers_details text-center">
+              <h3>Shohan Ean</h3>
+              <p>Sr. Faculty Member</p>
+              <img src="images/counterPartBorderBottom.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Our Teacher Part Ends -->
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/moment.js"></script>
